v0.2.1, 11 May 2016
 * Evaluation of xpaths supplied through save_instance.
 * Support for external choices and "itemsets.csv"
 * Meet all traditional XML editing requirements (e.g. newline fix)
 * First unittests added

v0.2.0, 3 May 2016
 * New release with many updates.
 * Support for pmaxform. This brings xml_root, save_instance, save_form, and
   delete_form with it.
 * Removed sys.exit() calls. Replaced with raising an exception.
 * Allow multiple versions at once.
 * Updated gui method for more use cases
 * Added python scripts to capture all basic usage in scripts folder.
 * Managing version in __init__.py file instead of setup.py.

v0.1.5, 14 March 2016
 * Caught a bug in the new FQ age XML editing. Fixed it.

v0.1.4, 3 March 2016
 * Added an alert to the presence of a meta logging tag.
 * Added support for new FQ age (related to removing string calculates).
 * Added support for Selection form instance name (was only one missing).
 * Added support for Ethiopia <regionname_transfer/>

v0.1.3, 26 January 2016
 * Changed default GUI functionality to close after work is done.
 * Now remove target strings from XML, e.g. '#####'.
 * NOTE: in parallel, customized pyxform gained support for logging.

v0.1.2, 10 November 2015
 * Added partial GUI functionality
 * Rewrote the command line usage so that the default is to edit without a
   suffix and to overwrite pre-existing files.
 * Changed max search location depth to 20 lines.
 * Changed internal mechanics to be friendlier with Windows.

v0.1.1, 17 August 2015
 * Edited XML no longer needs to have a suffix. Default is no suffix (edit 
   in place).
 * Supports <instanceName/> definitions from XLSForm.

v0.1.0, 12 June 2015 -- Initial release. 