@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
+<!-- qtools2 v0.2.0 -->
 <h:html xmlns="http://www.w3.org/2002/xforms" xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:h="http://www.w3.org/1999/xhtml" xmlns:jr="http://openrosa.org/javarosa" xmlns:orx="http://openrosa.org/xforms" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <h:head>
-    <h:title>Child Form 1</h:title>
+    <h:title>Child Form V</h:title>
     <model>
       <instance>
         <child id="child_form_id">
