@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
+<!-- qtools2 v0.2.0 -->
 <h:html xmlns="http://www.w3.org/2002/xforms" xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:h="http://www.w3.org/1999/xhtml" xmlns:jr="http://openrosa.org/javarosa" xmlns:orx="http://openrosa.org/xforms" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <h:head>
     <h:title>Parent Form</h:title>
@@ -16,10 +17,10 @@
           </meta>
         </parent>
       </instance>
-      <bind nodeset="/parent/b/name" saveInstance="child/a/name" type="string"/>
-      <bind nodeset="/parent/b/age" saveInstance="child/a/age" type="int"/>
+      <bind nodeset="/parent/b/name" saveInstance="/child/a/name" type="string"/>
+      <bind nodeset="/parent/b/age" saveInstance="/child/a/age" type="int"/>
       <bind calculate="concat( /parent/b/age , &quot;-&quot;,  /parent/b/name )" nodeset="/parent/b/eligible" relevant=" /parent/b/age  &gt; 10" saveForm="child_form_id" type="string"/>
-      <bind calculate="once(int(random()*3))" nodeset="/parent/b/random" saveInstance="child/extra_info" type="string"/>
+      <bind calculate="once(int(random()*3))" nodeset="/parent/b/random" saveInstance="/child/extra_info" type="string"/>
       <bind calculate="concat('uuid:', uuid())" nodeset="/parent/meta/instanceID" readonly="true()" type="string"/>
     </model>
   </h:head>
